testdata/baselines/reference/submodule/conformance/jsdocImportTypeReferenceToClassAlias.errors.txt
mod1.js(4,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== mod1.js (1 errors) ====
    class C {
        s() { }
    }
    module.exports.C = C
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
==== test.js (0 errors) ====
    /** @typedef {import('./mod1').C} X */
    /** @param {X} c */
    function demo(c) {
        c.s
    }
    